Added OS restore script

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -74,8 +74,8 @@ blur-background = true;
 blur-background-fixed = true;
 experiment-backends = true;
 
-vsync = false;
-refresh-rate = 144;
+vsync = true;
+#refresh-rate = 144;
 
 wintypes:
 {
