Major Changes in Auto-installation Script

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,8 +7,8 @@
 #: characters.
 
 #font_family      FiraCode Nerd Font Mono
-font_family      Hack
-bold_font        FiraCode-Bold 
+font_family      Cascadia Code Regular
+bold_font        Cascadia Code Bold 
 italic_font      auto
 bold_italic_font auto
 
