creation of theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -171,7 +171,7 @@ adjust_line_height  1
 
 #: Defines the thickness of the underline cursor (in pts)
 
-# cursor_blink_interval -1
+ cursor_blink_interval -1
 
 #: The interval (in seconds) at which to blink the cursor. Set to zero
 #: to disable blinking. Negative values mean use system default. Note
@@ -441,7 +441,7 @@ enable_audio_bell no
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 70 50
+window_padding_width 20
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
