Task Manager and some touches

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -990,7 +990,7 @@ background_opacity 0.5
 #: shortcuts, you can change it in your kitty.conf to change the
 #: modifiers for all the default shortcuts.
 
-# clear_all_shortcuts no
+clear_all_shortcuts yes
 
 #: You can have kitty remove all shortcut definition seen up to this
 #: point. Useful, for instance, to remove the default shortcuts.
@@ -1230,7 +1230,7 @@ background_opacity 0.5
 # map kitty_mod+f10    toggle_maximized
 # map kitty_mod+u      kitten unicode_input
 # map kitty_mod+f2     edit_config_file
-# map kitty_mod+escape kitty_shell window
+#map kitty_mod+f9 kitty_shell window
 
 #: Open the kitty shell in a new window/tab/overlay/os_window to
 #: control kitty using commands.
