--- a/.config/btop/btop.conf
+++ b/.config/btop/btop.conf
@@ -199,7 +199,7 @@ net_iface = ""
 show_battery = True
 
 #* Which battery to use if multiple are present. "Auto" for auto detection.
-selected_battery = "Auto"
+selected_battery = "BAT1"
 
 #* Set loglevel for "~/.config/btop/btop.log" levels are: "ERROR" "WARNING" "INFO" "DEBUG".
 #* The level set includes all lower levels, i.e. "DEBUG" will show all logging info.
