Task Manager and some touches

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -275,7 +275,7 @@ adjust_line_height  1
 #: instead. Map a shortcut with the paste_from_buffer action to paste
 #: from this private buffer. For example::
 
-#:     map cmd+shift+v paste_from_buffer a1
+     map cmd+shift+v paste_from_buffer
 
 #: Note that copying to the clipboard is a security risk, as all
 #: programs, including websites open in your browser can read the
@@ -991,6 +991,8 @@ background_opacity 0.5
 #: modifiers for all the default shortcuts.
 
 clear_all_shortcuts yes
+map ctrl+shift+c copy_to_clipboard
+map ctrl+shift+v paste_from_clipboard
 
 #: You can have kitty remove all shortcut definition seen up to this
 #: point. Useful, for instance, to remove the default shortcuts.
