Major in nvim , minor overall

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,9 +7,9 @@
 #: characters.
 
 #font_family      FiraCode Nerd Font Mono
-font_family      Cascadia Code Regular
-#font_family      JetBrainsMono Nerd Font Regular
-bold_font        Cascadia Code Bold 
+#font_family      Cascadia Code Regular
+font_family      Tinos Nerd Font Book
+bold_font        Tinos Nerd Font Bold 
 italic_font      auto
 bold_italic_font auto
 
