--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,11 +7,13 @@
 #: characters.
 
 #font_family      FiraCode Nerd Font Mono
-#font_family      Cascadia Code Regular
-font_family      Tinos Nerd Font Book
-bold_font        Tinos Nerd Font Bold 
-italic_font      auto
-bold_italic_font auto
+font_family      Cascadia Mono Regular
+#font_family      IBM Plex Mono Italic
+bold_font        Cascadia Mono Bold
+#font_family      Tinos Nerd Font Book
+#bold_font        Tinos Nerd Font Bold 
+italic_font      Cascadia Mono Italic
+bold_italic_font Cascadia Mono Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
