--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,14 +6,21 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-#font_family      FiraCode Nerd Font Mono
-font_family      Cascadia Mono Regular
-#font_family      IBM Plex Mono Italic
-bold_font        Cascadia Mono Bold
+# font_family      FiraCode Nerd Font Mono
+# font_family      IBM Plex Mono Italic
 #font_family      Tinos Nerd Font Book
-#bold_font        Tinos Nerd Font Bold 
-italic_font      Cascadia Mono Italic
-bold_italic_font Cascadia Mono Bold Italic
+# bold_font        Tinos Nerd Font Bold 
+# font_family      Cascadia Mono Regular
+# bold_font        Cascadia Mono Bold
+# italic_font      Cascadia Mono Italic
+# bold_italic_font Cascadia Mono Bold Italic
+
+font_family      CaskaydiaCove Nerd Font:style=Regular
+bold_font        CaskaydiaCove Nerd Font:style=Bold
+italic_font      CaskaydiaCove Nerd Font:style=Italic
+bold_italic_font CaskaydiaCove Nerd Font:style=Bold Italic
+
+
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
