--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -36,14 +36,14 @@ general {
     col.active_border=$GREEN
     col.inactive_border=0x66333333
 
-    damage_tracking=full # leave it on full unless you hate your GPU and want to make it suffer
+#    damage_tracking=full # leave it on full unless you hate your GPU and want to make it suffer
 }
 
 decoration {
     rounding=5
     multisample_edges=1
-    blur=1
-    blur_size=3 # minimum 1
+    blur=5
+    blur_size=5 # minimum 1
     blur_passes=1 # minimum 1, more passes = more resource intensive.
     # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
     # if you want heavy blur, you need to up the blur_passes.
@@ -53,8 +53,8 @@ decoration {
 animations {
     enabled=1
     animation=windows,1,7,default
-    animation=borders,1,10,default
-    animation=fadein,1,10,default
+#    animation=borders,1,10,default
+    animation=fadeIn,1,10,default
     animation=workspaces,1,6,default
 }
 
@@ -73,8 +73,8 @@ dwindle {
 
 # example binds
 bind=SUPER,RETURN,exec,kitty
-bind=SUPERSHIFT,Q,killactive,
-bind=SUPERSHIFT,E,exit,
+bind=SUPER_SHIFT,Q,killactive,
+bind=SUPER_SHIFT,E,exit,
 bind=SUPER,E,exec,nautilus
 bind=SUPER,V,togglefloating,
 bind=SUPER,D,exec,wofi --show drun -o DP-3
@@ -85,10 +85,10 @@ bind=SUPER,l,movefocus,r
 bind=SUPER,k,movefocus,u
 bind=SUPER,j,movefocus,d
 
-bind=SUPERSHIFT,h,movewindow,l
-bind=SUPERSHIFT,l,movewindow,r
-bind=SUPERSHIFT,k,movewindow,u
-bind=SUPERSHIFT,j,movewindow,d
+bind=SUPER_SHIFT,h,movewindow,l
+bind=SUPER_SHIFT,l,movewindow,r
+bind=SUPER_SHIFT,k,movewindow,u
+bind=SUPER_SHIFT,j,movewindow,d
 
 bind=SUPER,1,workspace,1
 bind=SUPER,2,workspace,2
@@ -101,27 +101,28 @@ bind=SUPER,8,workspace,8
 bind=SUPER,9,workspace,9
 bind=SUPER,0,workspace,10
 
-bind=SUPERSHIFT,exclam,movetoworkspacesilent,1
-bind=SUPERSHIFT,at,movetoworkspacesilent,2
-bind=SUPERSHIFT,numbersign,movetoworkspacesilent,3
-bind=SUPERSHIFT,dollar,movetoworkspacesilent,4
-bind=SUPERSHIFT,percent,movetoworkspacesilent,5
-bind=SUPERSHIFT,asciicircum,movetoworkspacesilent,6
-bind=SUPERSHIFT,ampersand,movetoworkspacesilent,7
-bind=SUPERSHIFT,asterisk,movetoworkspacesilent,8
-bind=SUPERSHIFT,parenleft,movetoworkspacesilent,9
-bind=SUPERSHIFT,parenright,movetoworkspacesilent,10
+bind=SUPER_SHIFT,1,movetoworkspacesilent,1
+bind=SUPER_SHIFT,2,movetoworkspacesilent,2
+bind=SUPER_SHIFT,3,movetoworkspacesilent,3
+bind=SUPER_SHIFT,4,movetoworkspacesilent,4
+bind=SUPER_SHIFT,5,movetoworkspacesilent,5
+bind=SUPER_SHIFT,6,movetoworkspacesilent,6
+bind=SUPER_SHIFT,7,movetoworkspacesilent,7
+bind=SUPER_SHIFT,8,movetoworkspacesilent,8
+bind=SUPER_SHIFT,9,movetoworkspacesilent,9
+bind=SUPER_SHIFT,10,movetoworkspacesilent,10
 
 
 # Custom Binds
-bind=CTRLALTSHIFT,P,exec,zsh -c "poweroff"
-bind=CTRLALTSHIFT,R,exec,zsh -c "reboot"
-bind=CTRLALTSHIFT,S,exec,zsh -c "suspend"
+bind=CTRL_ALT_SHIFT,P,exec,zsh -c "poweroff"
+bind=CTRL_ALT_SHIFT,R,exec,zsh -c "reboot"
+bind=CTRL_ALT_SHIFT,S,exec,zsh -c "suspend"
 bind=SUPER,F5,forcerendererreload
 
-bind=SUPERALT,F,exec,firefox
-bind=SUPERALT,C,exec,chromium --incognito --disable-gpu-driver-bug-workarounds --enable-features=UseOzonePlatform --ozone-platform=wayland
-bind=SUPErALT,T,exec,telegram-desktop
+bind=SUPER_ALT,F,exec,firefox
+bind=SUPER_ALT,C,exec,chromium --incognito --disable-gpu-driver-bug-workarounds --enable-features=UseOzonePlatform --ozone-platform=wayland
+bind=SUPER_ALT,T,exec,telegram-desktop
+bind=SUPER_ALT,S,exec,LD_PRELOAD=/usr/local/lib/spotify-adblock.so spotify
 
 
 
@@ -129,6 +130,7 @@ windowrule=opacity 0.95 0.7,[0-9]
 windowrule=workspace 9 silent,Telegram
 windowrule=workspace 9 silent,telegramdesktop
 windowrule=workspace 8 silent,discord
+windowrule=workspace 10 silent,spotify
 windowrule=workspace 7 silent,obsidian
 windowrule=opacity 0.9,obsidian
 windowrule=opacity 0.9,firefox
