--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -40,11 +40,21 @@ general {
 }
 
 decoration {
-    rounding=5
-    multisample_edges=1
-    blur=5
-    blur_size=5 # minimum 1
+    blur_new_optimizations = true
+    drop_shadow = true
+    shadow_range=100
+    shadow_render_power=5
+    col.shadow= 0x33000000
+    col.shadow_inactive=0x22000000
+    rounding=15
+    blur=0
+    blur_size=1 # minimum 1
     blur_passes=1 # minimum 1, more passes = more resource intensive.
+#    rounding=5
+#    multisample_edges=1
+#    blur=5
+#    blur_size=5 # minimum 1
+#    blur_passes=1 # minimum 1, more passes = more resource intensive.
     # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
     # if you want heavy blur, you need to up the blur_passes.
     # the more passes, the more you can up the blur_size without noticing artifacts.
@@ -52,14 +62,27 @@ decoration {
 
 animations {
     enabled=1
+    bezier=overshot,0.13,0.99,0.29,1.1
+#    animation=windows,1,4,overshot,slide
+    animation=border,1,10,default
+    animation=fade,1,10,default
+#    animation=workspaces,1,6,overshot,slidevert
     animation=windows,1,7,default
-#    animation=borders,1,10,default
-    animation=fadeIn,1,10,default
+##    animation=borders,1,10,default
+#    animation=fadeIn,1,10,default
     animation=workspaces,1,6,default
 }
 
+
 dwindle {
-    pseudotile=0 # enable pseudotiling on dwindle
+    pseudotile=1 # enable pseudotiling on dwindle
+    force_split=0
+    col.group_border=0xff89dceb
+    col.group_border_active=0xfff9e2af
+}
+
+master{
+    
 }
 
 # example window rules
@@ -124,17 +147,37 @@ bind=SUPER_ALT,C,exec,chromium --incognito --disable-gpu-driver-bug-workarounds 
 bind=SUPER_ALT,T,exec,telegram-desktop
 bind=SUPER_ALT,S,exec,LD_PRELOAD=/usr/local/lib/spotify-adblock.so spotify
 
+bind=SUPER_ALT_SHIFT,T,exec,cat /mnt/win1/Myself/repo_key | wl-copy
 
 
-windowrule=opacity 0.95 0.7,[0-9]
+# Music
+
+bind=SUPER,Insert,exec,playerctl play-pause
+bind=SUPER,Delete,exec,playerctl stop
+bind=SUPER,Home,exec,playerctl next
+bind=SUPER,End,exec,playerctl previous
+
+# Sound
+
+bind=SUPER,Prior,exec,pulsemixer --change-volume +2 --max-volume 100
+bind=SUPER,Next,exec,pulsemixer --change-volume -2 --max-volume 100
+
+# Speaker
+
+bind=SUPER,Pause,exec,~/bin/audio_switcher.sh
+
+
+
+windowrule=opacity 0.95,[0-9]
 windowrule=workspace 9 silent,Telegram
-windowrule=workspace 9 silent,telegramdesktop
+windowrule=workspace 9 silent,telegram-desktop
+windowrule=workspace 9 silent,org.telegram.desktop
 windowrule=workspace 8 silent,discord
-windowrule=workspace 10 silent,spotify
+windowrule=workspace 10 silent,Spotify
 windowrule=workspace 7 silent,obsidian
-windowrule=opacity 0.9,obsidian
-windowrule=opacity 0.9,firefox
-windowrule=opacity 0.7,discord
+#windowrule=opacity 0.9,obsidian
+#windowrule=opacity 0.9,firefox
+#windowrule=opacity 0.7,discord
 
 #exec-once=discord
 exec-once=telegram-desktop
@@ -142,5 +185,6 @@ exec-once=obsidian
 #exec-once=swaybg -o DP-1 -i Downloads/midnight-train-1920×1080.jpg -m fit
 exec-once=xdman
 exec-once=mako
-exec-once=mpvpaper -o "no-audio loop" DP-1 Downloads/wall.mp4 
+exec=./bin/wall
+#exec-once=mpvpaper -o "no-audio loop" DP-1 /mnt/win2/Wallpapers/New/berserk.mkv
 #exec-once=swaybg -o DP-3 -i Downloads/midnight-train-1920×1080.jpg -m fit
