--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,148 +1,165 @@
-# This is an example Hyprland config file.
-# Syntax is the same as in Hypr, but settings might differ.
-#
-# Refer to the wiki for more information.
-
-
-
-$GREEN = 0x6680c484
-
-
 monitor=,1920x1080@144,0x0,1
 workspace=DP-1,1
 monitor=eDP-2,disable
 monitor=eDP-1,disable
 monitor=eDP-3,disable
 
-input {
-    kb_layout=
-    kb_variant=
-    kb_model=
-    kb_options=
-    kb_rules=
+# See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
-    follow_mouse=1
+# Execute your favorite apps at launch
+# exec-once = waybar & hyprpaper & firefox
+
+# Source a file (multi-file configs)
+# source = ~/.config/hypr/myColors.conf
+
+# Some default env vars.
+env = XCURSOR_SIZE,24
+
+
+
+# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
+input {
+    kb_layout = us
+    kb_variant =
+    kb_model =
+    kb_options =
+    kb_rules =
+
+    follow_mouse = 1
     force_no_accel=1
+
+    touchpad {
+        natural_scroll = no
+    }
+
+    sensitivity =  1.25 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
-    max_fps=144 # deprecated, unused
-    sensitivity=1.25
-    main_mod=SUPER
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in=5
-    gaps_out=20
-    border_size=2
-    col.active_border=$GREEN
-    col.inactive_border=0x66333333
+    gaps_in = 5
+    gaps_out = 20
+    border_size = 2
+    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.inactive_border = rgba(595959aa)
 
-#    damage_tracking=full # leave it on full unless you hate your GPU and want to make it suffer
+    layout = dwindle
 }
 
 decoration {
-    blur_new_optimizations = true
-    drop_shadow = true
-    shadow_range=100
-    shadow_render_power=5
-    col.shadow= 0x33000000
-    col.shadow_inactive=0x22000000
-    rounding=15
-    blur=0
-    blur_size=1 # minimum 1
-    blur_passes=1 # minimum 1, more passes = more resource intensive.
-#    rounding=5
-#    multisample_edges=1
-#    blur=5
-#    blur_size=5 # minimum 1
-#    blur_passes=1 # minimum 1, more passes = more resource intensive.
-    # Your blur "amount" is blur_size * blur_passes, but high blur_size (over around 5-ish) will produce artifacts.
-    # if you want heavy blur, you need to up the blur_passes.
-    # the more passes, the more you can up the blur_size without noticing artifacts.
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+
+    rounding = 10
+    blur = yes
+    blur_size = 3
+    blur_passes = 1
+    blur_new_optimizations = on
+
+    drop_shadow = yes
+    shadow_range = 4
+    shadow_render_power = 3
+    col.shadow = rgba(1a1a1aee)
 }
 
 animations {
-    enabled=1
-    bezier=overshot,0.13,0.99,0.29,1.1
-#    animation=windows,1,4,overshot,slide
-    animation=border,1,10,default
-    animation=fade,1,10,default
-#    animation=workspaces,1,6,overshot,slidevert
-    animation=windows,1,7,default
-##    animation=borders,1,10,default
-#    animation=fadeIn,1,10,default
-    animation=workspaces,1,6,default
-}
+    enabled = yes
 
+    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+
+    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+
+    animation = windows, 1, 7, myBezier
+    animation = windowsOut, 1, 7, default, popin 80%
+    animation = border, 1, 10, default
+    animation = borderangle, 1, 8, default
+    animation = fade, 1, 7, default
+    animation = workspaces, 1, 6, default
+}
 
 dwindle {
-    pseudotile=1 # enable pseudotiling on dwindle
-    force_split=0
-    col.group_border=0xff89dceb
-    col.group_border_active=0xfff9e2af
+    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
+    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    preserve_split = yes # you probably want this
 }
 
-master{
-    
+master {
+    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
+    new_is_master = true
 }
 
-# example window rules
-# for windows named/classed as abc and xyz
-#windowrule=move 69 420,abc
-#windowrule=size 420 69,abc
-#windowrule=tile,xyz
-#windowrule=float,abc
-#windowrule=pseudo,abc
-#windowrule=monitor 0,xyz
+gestures {
+    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    workspace_swipe = off
+}
 
-# example binds
-bind=SUPER,RETURN,exec,kitty
-bind=SUPER_SHIFT,Q,killactive,
-bind=SUPER_SHIFT,E,exit,
-bind=SUPER,E,exec,nautilus
-bind=SUPER,V,togglefloating,
-bind=SUPER,D,exec,wofi --show drun -o DP-1
-bind=SUPER,P,pseudo,
+# Example per-device config
+# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
+device:epic mouse V1 {
+    sensitivity = -0.5
+}
 
-bind=SUPER,h,movefocus,l
-bind=SUPER,l,movefocus,r
-bind=SUPER,k,movefocus,u
-bind=SUPER,j,movefocus,d
-
-bind=SUPER_SHIFT,h,movewindow,l
-bind=SUPER_SHIFT,l,movewindow,r
-bind=SUPER_SHIFT,k,movewindow,u
-bind=SUPER_SHIFT,j,movewindow,d
-
-bind=SUPER,1,workspace,1
-bind=SUPER,2,workspace,2
-bind=SUPER,3,workspace,3
-bind=SUPER,4,workspace,4
-bind=SUPER,5,workspace,5
-bind=SUPER,6,workspace,6
-bind=SUPER,7,workspace,7
-bind=SUPER,8,workspace,8
-bind=SUPER,9,workspace,9
-bind=SUPER,0,workspace,10
-
-bind=SUPER_SHIFT,1,movetoworkspacesilent,1
-bind=SUPER_SHIFT,2,movetoworkspacesilent,2
-bind=SUPER_SHIFT,3,movetoworkspacesilent,3
-bind=SUPER_SHIFT,4,movetoworkspacesilent,4
-bind=SUPER_SHIFT,5,movetoworkspacesilent,5
-bind=SUPER_SHIFT,6,movetoworkspacesilent,6
-bind=SUPER_SHIFT,7,movetoworkspacesilent,7
-bind=SUPER_SHIFT,8,movetoworkspacesilent,8
-bind=SUPER_SHIFT,9,movetoworkspacesilent,9
-bind=SUPER_SHIFT,10,movetoworkspacesilent,10
+# Example windowrule v1
+# windowrule = float, ^(kitty)$
+# Example windowrule v2
+# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 
-# Custom Binds
-bind=CTRL_ALT_SHIFT,P,exec,zsh -c "poweroff"
-bind=CTRL_ALT_SHIFT,R,exec,zsh -c "reboot"
-bind=CTRL_ALT_SHIFT,S,exec,zsh -c "suspend"
-bind=SUPER,F5,forcerendererreload
+# See https://wiki.hyprland.org/Configuring/Keywords/ for more
+$mainMod = SUPER
+
+# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+bind = $mainMod, RETURN, exec, kitty
+bind = $mainMod_SHIFT,Q, killactive, 
+bind = $mainMod_SHIFT,E, exit, 
+bind = $mainMod, E, exec, nautilus,
+bind = $mainMod, V, togglefloating, 
+bind = $mainMod, D, exec, wofi --show drun
+bind = $mainMod, P, pseudo, # dwindle
+#bind = $mainMod, J, togglesplit, # dwindle
+
+# Move focus with mainMod + arrow keys
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, J, movefocus, u
+bind = $mainMod, K, movefocus, d
+
+# Switch workspaces with mainMod + [0-9]
+bind = $mainMod, 1, workspace, 1
+bind = $mainMod, 2, workspace, 2
+bind = $mainMod, 3, workspace, 3
+bind = $mainMod, 4, workspace, 4
+bind = $mainMod, 5, workspace, 5
+bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 10
+
+# Move active window to a workspace with mainMod + SHIFT + [0-9]
+bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
+bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
+bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
+bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
+bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
+bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
+bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
+bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
+
+# Scroll through existing workspaces with mainMod + scroll
+bind = $mainMod, mouse_down, workspace, e+1
+bind = $mainMod, mouse_up, workspace, e-1
+
+# Move/resize windows with mainMod + LMB/RMB and dragging
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
+
 
 bind=SUPER_ALT,F,exec,firefox
+bind=SUPER_ALT,B,exec,brave
 bind=SUPER_ALT,C,exec,chromium --incognito --disable-gpu-driver-bug-workarounds --enable-features=UseOzonePlatform --ozone-platform=wayland
 bind=SUPER_ALT,T,exec,telegram-desktop
 bind=SUPER_ALT,S,exec,LD_PRELOAD=/usr/local/lib/spotify-adblock.so spotify
@@ -166,6 +183,20 @@ bind=SUPER,Next,exec,pulsemixer --change-volume -2 --max-volume 100
 
 bind=SUPER,Pause,exec,~/bin/audio_switcher.sh
 
+# Screenshot
+
+bind=SUPER,PRINT,exec,grimblast copysave output
+bind=SUPER_SHIFT,PRINT,exec,grimblast copysave area
+
+
+
+# PC 
+
+bind=CTRL_ALT_SHIFT,P,exec,poweroff
+bind=CTRL_ALT_SHIFT,R,exec,reboot
+bind=CTRL_ALT_SHIFT,H,exec,halt
+bind=CTRL_ALT_SHIFT,S,exec,suspend
+
 
 
 windowrule=opacity 0.95,[0-9]
@@ -182,9 +213,12 @@ windowrule=workspace 7 silent,obsidian
 #exec-once=discord
 exec-once=telegram-desktop
 exec-once=obsidian
-#exec-once=swaybg -o DP-1 -i Downloads/midnight-train-1920×1080.jpg -m fit
+#exec-once=swaybg -o DP-1 -i Downloads/midnight-train-1920~W1080.jpg -m fit
 exec-once=xdman
-exec-once=mako
+# exec-once=mako
+exec-once=dunst
 exec=./bin/wall
+exec-once=numlockx
+exec-once=waybar 
 #exec-once=mpvpaper -o "no-audio loop" DP-1 /mnt/win2/Wallpapers/New/berserk.mkv
-#exec-once=swaybg -o DP-3 -i Downloads/midnight-train-1920×1080.jpg -m fit
+#exec-once=swaybg -o DP-3 -i Downloads/midnight-train-1920~W1080.jpg -m fit
