--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -113,7 +113,7 @@ $mainMod = SUPER
 bind = $mainMod, RETURN, exec, kitty
 bind = $mainMod_SHIFT,Q, killactive, 
 bind = $mainMod_SHIFT,E, exit, 
-bind = $mainMod, E, exec, nautilus,
+bind = $mainMod, E, exec, nautilus
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, D, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
