Nvidia main fix mpvpaper

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -164,7 +164,8 @@ bind=SUPER_ALT,C,exec,chromium --incognito --disable-gpu-driver-bug-workarounds 
 bind=SUPER_ALT,T,exec,telegram-desktop
 bind=SUPER_ALT,S,exec,LD_PRELOAD=/usr/local/lib/spotify-adblock.so spotify
 
-bind=SUPER_ALT_SHIFT,T,exec,cat /mnt/win1/Myself/repo_key | wl-copy
+# Token
+bind=SUPER_ALT_SHIFT,T,exec,cat /mnt/win1/Myself/repo_key | wl-copy; notify-send "Token Copied"
 
 
 # Music
@@ -217,7 +218,8 @@ exec-once=obsidian
 exec-once=xdman
 # exec-once=mako
 exec-once=dunst
-exec=./bin/wall
+#exec-once=./bin/wall
+exec-once=mpvpaper -o "no-audio" DP-1 /mnt/win2/Wallpapers/spacewall.mp4 
 exec-once=numlockx
 exec-once=waybar 
 #exec-once=mpvpaper -o "no-audio loop" DP-1 /mnt/win2/Wallpapers/New/berserk.mkv
