--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -45,6 +45,7 @@ general {
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
+#    allow_workspace_cycles = true
 }
 
 decoration {
@@ -92,6 +93,10 @@ gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     workspace_swipe = off
 }
+
+binds {
+    allow_workspace_cycles = true
+  }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
@@ -227,10 +232,12 @@ windowrule=workspace 9 silent,org.telegram.desktop
 windowrule=workspace 8 silent,discord
 windowrule=workspace 10 silent,Spotify
 windowrule=workspace 7 silent,obsidian
-windowrule=workspace 7 silent,notion-app-enhanced
+windowrule=workspace 6 silent,notion-app-enhanced
 #windowrule=opacity 0.9,obsidian
 #windowrule=opacity 0.9,firefox
 #windowrule=opacity 0.7,discord
+
+windowrulev2=float,class:Tk
 
 exec-once=discord
 exec-once=telegram-desktop
@@ -245,7 +252,7 @@ exec-once=xset r rate 300 50
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 #exec-once=numlockx
-#exec-once=swaybg -o DP-1 -i Downloads/midnight-train-1920~W1080.jpg -m fit
+exec-once=swaybg -o DP-1 -i Downloads/arch_linux.png -m fit
 #exec-once=xdman
 # exec-once =./bin/startup_ap.sh
 # exec-once=mako
