--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -252,7 +252,7 @@ exec-once=xset r rate 300 50
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 #exec-once=numlockx
-exec-once=swaybg -o DP-1 -i Downloads/arch_linux.png -m fit
+exec-once=swaybg -o DP-1 -i /mnt/win2/Wallpapers/arch_linux.png -m fit
 #exec-once=xdman
 # exec-once =./bin/startup_ap.sh
 # exec-once=mako
