--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -187,8 +187,8 @@ bind=SUPER,End,exec,playerctl previous
 
 # Sound
 
-bind=SUPER,Prior,exec,pulsemixer --change-volume +2 --max-volume 100
-bind=SUPER,Next,exec,pulsemixer --change-volume -2 --max-volume 100
+bind=SUPER,Prior,exec,pulsemixer --change-volume +2 --max-volume 100 && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1| awk '{print substr($5, 1, length($5)-1)}' > /tmp/wobpipe
+bind=SUPER,Next,exec,pulsemixer --change-volume -2 --max-volume 100 && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1| awk '{print substr($5, 1, length($5)-1)}' > /tmp/wobpipe
 
 # Speaker
 
@@ -259,3 +259,4 @@ exec-once=swaybg -o DP-1 -i /mnt/win2/Wallpapers/arch_linux.png -m fit
 #exec-once=./bin/wall
 #exec-once=mpvpaper -o "no-audio loop" DP-1 /mnt/win2/Wallpapers/New/berserk.mkv
 #exec-once=swaybg -o DP-3 -i Downloads/midnight-train-1920~W1080.jpg -m fit
+exec-once=nohup ./bin/wobpipe 
