--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -282,5 +282,6 @@ exec-once=swaybg -o DP-1 -i /mnt/win2/Wallpapers/31418.jpg -m fit
 #exec-once=mpvpaper -o "no-audio loop" DP-1 /mnt/win2/Wallpapers/New/berserk.mkv
 #exec-once=mpvpaper -o "no-audio loop" -f -p DP-1 ~/Downloads/dark-street-lights-moewalls-com.mp4
 #exec-once=swaybg -o DP-3 -i Downloads/midnight-train-1920~W1080.jpg -m fit
-exec-once=nohup ./bin/wobpipe 
+#exec-once=nohup ./bin/wobpipe
 exec-once=nohup ./bin/check_internet
+exec-once=nohup source ~/bin/set_border
